# SimplePlatformer

./: CMakeLists.txt  README.md  main.cpp
assets/: level1.txt  level2.txt
include/: enemy.hpp  game.hpp  gamestate.hpp  levels.hpp  menu.hpp  player.hpp
src/: enemy.cpp  game.cpp  levels.cpp  menu.cpp  player.cpp
